@@ -1203,248 +1203,6 @@ class PasswordGenerator(Utility):
 
 
 
-class Preferences(Utility):
-	"A preference dialog"
-
-	def __init__(self, parent, cfg):
-		Utility.__init__(self, parent, "Preferences")
-		self.config = cfg
-		self.set_modal(False)
-
-		self.notebook = ui.Notebook()
-		self.vbox.pack_start(self.notebook)
-
-		self.page_files = self.notebook.create_page("Files")
-		self.__init_section_startup(self.page_files)
-		self.__init_section_filehandling(self.page_files)
-
-		self.page_interface = self.notebook.create_page("Interface")
-		self.__init_section_doubleclick(self.page_interface)
-		self.__init_section_toolbar(self.page_interface)
-
-		self.page_password = self.notebook.create_page("Passwords")
-		self.__init_section_password_display(self.page_password)
-		self.__init_section_clipboard(self.page_password)
-		self.__init_section_pwgen(self.page_password)
-
-		self.page_gotocmd = self.notebook.create_page("Goto Commands")
-		self.__init_section_gotocmd(self.page_gotocmd)
-
-		self.connect("response", lambda w,d: self.destroy())
-
-
-	def __init_section_clipboard(self, page):
-		"Sets up the clipboard section"
-
-		self.section_clipboard = page.add_section("Clipboard")
-
-		# check-button for username
-		self.check_chain_username = ui.CheckButton("Also copy username when copying password")
-		ui.config_bind(self.config, "clipboard/chain_username", self.check_chain_username)
-
-		self.tooltips.set_tip(self.check_chain_username, "When the password is copied to clipboard, put the username before the password as a clipboard \"chain\"")
-		self.section_clipboard.append_widget(None, self.check_chain_username)
-
-
-	def __init_section_doubleclick(self, page):
-		"Sets up the doubleclick section"
-
-		self.section_doubleclick = page.add_section("Doubleclick Action")
-
-		# radio-button for go to
-		self.radio_doubleclick_goto = ui.RadioButton(None, "Go to account, if possible")
-		ui.config_bind(self.config, "behavior/doubleclick", self.radio_doubleclick_goto, "goto")
-
-		self.tooltips.set_tip(self.radio_doubleclick_goto, "Go to the account (open in external application) on doubleclick, if command is set and required data filled in")
-		self.section_doubleclick.append_widget(None, self.radio_doubleclick_goto)
-
-		# radio-button for edit
-		self.radio_doubleclick_edit = ui.RadioButton(self.radio_doubleclick_goto, "Edit account")
-		ui.config_bind(self.config, "behavior/doubleclick", self.radio_doubleclick_edit, "edit")
-
-		self.tooltips.set_tip(self.radio_doubleclick_edit, "Edit the account on doubleclick")
-		self.section_doubleclick.append_widget(None, self.radio_doubleclick_edit)
-
-		# radio-button for copy
-		self.radio_doubleclick_copy = ui.RadioButton(self.radio_doubleclick_goto, "Copy password to clipboard")
-		ui.config_bind(self.config, "behavior/doubleclick", self.radio_doubleclick_copy, "copy")
-
-		self.tooltips.set_tip(self.radio_doubleclick_copy, "Copy the password to clipboard on doubleclick")
-		self.section_doubleclick.append_widget(None, self.radio_doubleclick_copy)
-
-
-	def __init_section_filehandling(self, page):
-		"Sets up the file section"
-
-		self.section_filehandling = page.add_section("File Handling")
-
-		# check-button for autosave
-		self.check_autosave = ui.CheckButton("Autosave data when changed")
-		ui.config_bind(self.config, "file/autosave", self.check_autosave)
-
-		self.tooltips.set_tip(self.check_autosave, "Automatically saves the data file when an entry is added, modified or removed")
-		self.section_filehandling.append_widget(None, self.check_autosave)
-
-		# autolock file
-		self.check_autolock = ui.CheckButton("Autolock file when inactive for")
-		ui.config_bind(self.config, "file/autolock", self.check_autolock)
-		self.check_autolock.connect("toggled", lambda w: self.spin_autolock_timeout.set_sensitive(w.get_active()))
-		self.tooltips.set_tip(self.check_autolock, "Automatically lock the data file after a period of inactivity")
-
-		self.spin_autolock_timeout = ui.SpinEntry()
-		self.spin_autolock_timeout.set_range(1, 120)
-		self.spin_autolock_timeout.set_sensitive(self.check_autolock.get_active())
-		ui.config_bind(self.config, "file/autolock_timeout", self.spin_autolock_timeout)
-		self.tooltips.set_tip(self.spin_autolock_timeout, "The period of inactivity before locking the file, in minutes")
-
-		hbox = ui.HBox()
-		hbox.set_spacing(3)
-		hbox.pack_start(self.check_autolock)
-		hbox.pack_start(self.spin_autolock_timeout)
-		hbox.pack_start(ui.Label("minutes"))
-		self.section_filehandling.append_widget(None, hbox)
-
-
-	def __init_section_gotocmd(self, page):
-		"Sets up the goto command section"
-
-		self.section_gotocmd = page.add_section("Goto Commands")
-
-		for entrytype in entry.ENTRYLIST:
-			if entrytype == entry.FolderEntry:
-				continue
-
-			e = entrytype()
-
-			widget = ui.Entry()
-			ui.config_bind(self.config, "launcher/%s" % e.id, widget)
-
-			tooltip = "Goto command for %s accounts. The following expansion variables can be used:\n\n" % e.typename
-
-			for field in e.fields:
-				tooltip += "%%%s: %s\n" % ( field.symbol, field.name )
-
-			tooltip += "\n"
-			tooltip += "%%: a % sign\n"
-			tooltip += "%?x: optional expansion variable\n"
-			tooltip += "%(...%): optional substring expansion"
-
-			self.tooltips.set_tip(widget, tooltip)
-			self.section_gotocmd.append_widget(e.typename, widget)
-
-
-	def __init_section_password_display(self, page):
-		"Sets up the password display section"
-
-		self.section_password_display = page.add_section("Password Display")
-
-		# show passwords checkbutton
-		self.check_show_passwords = ui.CheckButton("Show passwords and other secrets")
-		ui.config_bind(self.config, "view/passwords", self.check_show_passwords)
-
-		self.tooltips.set_tip(self.check_show_passwords, "Display passwords and other secrets, such as PIN codes (otherwise, hide with ******)")
-		self.section_password_display.append_widget(None, self.check_show_passwords)
-
-
-	def __init_section_pwgen(self, page):
-		"Sets up the password generator section"
-
-		self.section_pwgen = page.add_section("Password Generator")
-
-		# password length spinbutton
-		self.spin_pwlen = ui.SpinEntry()
-		self.spin_pwlen.set_range(4, 32)
-		ui.config_bind(self.config, "passwordgen/length", self.spin_pwlen)
-
-		self.tooltips.set_tip(self.spin_pwlen, "The number of characters in generated passwords - 8 or more are recommended")
-		self.section_pwgen.append_widget("Password length", self.spin_pwlen)
-
-		# checkbox for avoiding ambiguous characters
-		self.check_ambiguous = ui.CheckButton("Avoid ambiguous characters")
-		ui.config_bind(self.config, "passwordgen/avoid_ambiguous", self.check_ambiguous)
-
-		self.tooltips.set_tip(self.check_ambiguous, "When enabled, generated passwords will not contain ambiguous characters - like 0 (zero) and O (capital o)")
-		self.section_pwgen.append_widget(None, self.check_ambiguous)
-
-
-	def __init_section_startup(self, page):
-		"Sets up the startup section"
-
-		self.section_startup = page.add_section("Startup")
-
-		# check-button for autoloading a file
-		self.check_autoload = ui.CheckButton("Open file on startup")
-		ui.config_bind(self.config, "file/autoload", self.check_autoload)
-		self.check_autoload.connect("toggled", lambda w: self.entry_autoload_file.set_sensitive(w.get_active()))
-
-		self.tooltips.set_tip(self.check_autoload, "When enabled, a file will be opened when the program is started")
-		self.section_startup.append_widget(None, self.check_autoload)
-
-		# entry for file to autoload
-		self.entry_autoload_file = ui.FileEntry("Select File to Automatically Open")
-		ui.config_bind(self.config, "file/autoload_file", self.entry_autoload_file)
-		self.entry_autoload_file.set_sensitive(self.check_autoload.get_active())
-
-		eventbox = ui.EventBox(self.entry_autoload_file)
-		self.tooltips.set_tip(eventbox, "A file to be opened when the program is started")
-		self.section_startup.append_widget("File to open", eventbox)
-
-
-	def __init_section_toolbar(self, page):
-		"Sets up the toolbar section"
-
-		self.section_toolbar = page.add_section("Toolbar Style")
-
-		# radio-button for desktop default
-		self.radio_toolbar_desktop = ui.RadioButton(None, "Use desktop default")
-		ui.config_bind(self.config, "view/toolbar_style", self.radio_toolbar_desktop, "desktop")
-
-		self.tooltips.set_tip(self.radio_toolbar_desktop, "Show toolbar items with default style")
-		self.section_toolbar.append_widget(None, self.radio_toolbar_desktop)
-
-		# radio-button for icons and text
-		self.radio_toolbar_both = ui.RadioButton(self.radio_toolbar_desktop, "Show icons and text")
-		ui.config_bind(self.config, "view/toolbar_style", self.radio_toolbar_both, "both")
-
-		self.tooltips.set_tip(self.radio_toolbar_both, "Show toolbar items with both icons and text")
-		self.section_toolbar.append_widget(None, self.radio_toolbar_both)
-
-		# radio-button for icons and important text
-		self.radio_toolbar_bothhoriz = ui.RadioButton(self.radio_toolbar_desktop, "Show icons and important text")
-		ui.config_bind(self.config, "view/toolbar_style", self.radio_toolbar_bothhoriz, "both-horiz")
-
-		self.tooltips.set_tip(self.radio_toolbar_bothhoriz, "Show toolbar items with text beside important icons")
-		self.section_toolbar.append_widget(None, self.radio_toolbar_bothhoriz)
-
-		# radio-button for icons only
-		self.radio_toolbar_icons = ui.RadioButton(self.radio_toolbar_desktop, "Show icons only")
-		ui.config_bind(self.config, "view/toolbar_style", self.radio_toolbar_icons, "icons")
-
-		self.tooltips.set_tip(self.radio_toolbar_icons, "Show toolbar items with icons only")
-		self.section_toolbar.append_widget(None, self.radio_toolbar_icons)
-
-		# radio-button for text only
-		self.radio_toolbar_text = ui.RadioButton(self.radio_toolbar_desktop, "Show text only")
-		ui.config_bind(self.config, "view/toolbar_style", self.radio_toolbar_text, "text")
-
-		self.tooltips.set_tip(self.radio_toolbar_text, "Show toolbar items with text only")
-		self.section_toolbar.append_widget(None, self.radio_toolbar_text)
-
-
-	def run(self):
-		"Runs the preference dialog"
-
-		self.show_all()
-
-		if EVENT_FILTER != None:
-			self.window.add_filter(EVENT_FILTER)
-
-		# for some reason, gtk crashes on close-by-escape if we don't do this
-		self.get_button(0).grab_focus()
-		self.notebook.grab_focus()
-
-
-
 ##### FUNCTIONS #####
 
 def create_unique(dialog, *args):
