@@ -3,6 +3,7 @@ xxxx-xx-xx: Revelation 0.5.0
 
 Code changes:
 - don't use deprecated gnome-python modules
+- moved preference dialog from dialog module to main script
 
 
 2006-02-06: Revelation 0.4.7
